argo-events/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:us-east-1:xxxx:certificate/xxxx-xxxx-xxxx-xxxx
    alb.ingress.kubernetes.io/group.name: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: 'subnet-xxxxxx,subnet-xxxxx'
    alb.ingress.kubernetes.io/target-type: ip
  name: whatsapp-webhook-ingress
spec:
  ingressClassName: alb
  rules:
    - host: whatsapp-webhook-ingress.trustmi.app
      http:
        paths:
          - backend:
              service:
                name: webhook-whatsapp-eventsource-svc
                port:
                  number: 12000
            path: /
            pathType: Prefix
